--- a/pages/translations/es/LC_MESSAGES/messages.po
+++ b/pages/translations/es/LC_MESSAGES/messages.po
@@ -1,3 +1,59 @@
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "RDF en Cincuenta palabras o menos"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "Okay, esto capaz sea un poco m&#x00E1;s de cincuenta palabras, pero los puntos clave son bastante simples (y puestos en texto <b>en negrita</b> para esos tipos de personas que quieren ir al punto). El <a href="https://es.wikipedia.org/wiki/Resource_Description_Framework" ><i>Resource Description Framework</i></a>, o &#x201C;RDF&#x201C;, es realmente dos cosas."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "En primer lugar, RDF es un modelo basado en gr&#x00E1;ficos para describir recursos de Internet (como p&#x00E1;ginas web y mensajes de correo electr&#x00F3;nico) y c&#x00F3;mo se relacionan estos recursos entre s&#x00ED;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "Pero, &#x00BF;qu&#x00E9; significa eso realmente&#x003F; Para un desarrollador, significa que el modelo de datos RDF (el &#x201C;gr&#x00E1;fico&#x201C;) puede usarse como un mecanismo para integrar y organizar recursos de Internet."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "Veamos un ejemplo&#x003A; <i>marcadores</i>. En este momento, la mayor&#x00ED;a de los navegadores web le permiten organizar sus marcadores jer&#x00E1;rquicamente en <i>carpetas</i>. Cada marcador es un <i>puntero</i> a una p&#x00E1;gina web llamado <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "Pero una página web es sólo un tipo de recurso de Internet. Hay muchos otros, incluidos mensajes de correo electrónico, artículos de Reddit, canales RSS y resultados de búsqueda de su rastreador web favorito, solo por nombrar algunos. Y, fundamentalmente, no hay ninguna razón por la que no puedas tratarlos como &#x201C;marcadores&#x201D. además, agruparlos en carpetas como desee, o tal vez incluso crear archivos &#x201C;inteligentes&#x201D. carpetas que, cuando las abre, generan dinámicamente su contenido ejecutando una búsqueda común que usted defina."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "Y un &#x201C;marcador&#x201C; realmente podr&#x00ED;a tener propiedades arbitrarias asociadas&#x003A; es posible que desee inventar su propio esquema de &#x201C;clasificaci&#x00F3;n&#x201C; para un marcador de codificaci&#x00F3;n de colores &#x201C;caliente&#x201C;, &#x201C;tibio&#x201C; y &#x201C;fresco&#x201C; en la Macintosh. O puede querer relacionar un marcador a otro marcador, o mantenerlo en varias &#x201C;carpetas&#x201C; a la vez."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "El gr&#x00E1;fico RDF proporciona un modelo de datos perfecto sobre el cual construir un servicio de marcado &#x201C;universal&#x201C; como se describi&#x00F3; anteriormente&#x003A; el gr&#x00E1;fico puede contener punteros a recursos arbitrarios y puede agruparlos de cualquier forma que pueda imaginar."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "Pero espera hay m&#x00E1;s..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "En segundo lugar, RDF es una sintaxis de serializaci&#x00F3;n. Esta sintaxis permite que el modelo tipo gr&#x00E1;fico se comunique entre &#x201C;agentes&#x201C;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "De acuerdo, &#x00BF;Pero qu&#x00E9; <i>cosa</i> significa eso&#x003F; Fundamentalmente, significa que partes del modelo de datos RDF pueden comunicarse a trav&#x00E9;s de los l&#x00ED;mites de la red, y el contenido del gr&#x00E1;fico puede cambiar din&#x00E1;micamente a medida que llega la informaci&#x00F3;n de un servicio remoto."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "Regresemos a nuestro ejemplo de marcador. Digamos que una de mis &#x201C;carpetas&#x201C; de marcadores es realmente un puntero a mi bandeja de entrada de correo electrn&#x00F3;ico: cuando abro esa carpeta, &#x00A1;voil&#x00E1;&#x0021; Aparecen todos los mensajes que he recibido durante la noche."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "&#x00BF;Pero c&#x00F3;mo sucede esto&#x003F; La &#x201C;carpeta&#x201C; de la bandeja de entrada era realmente solo un puntero a un recurso de Internet que contiene m&#x00E1;s RDF que extiende del gr&#x00E1;fico. Ese &#x201C;recurso de Internet&#x201C; era un URI que apuntaba a un script CGI (por ejemplo, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox</span>&lt;/code&gt;). El script CGI realmente genera <i>RDF serializado</i>, que b&#x00E1;sicamente es solo una forma de formatear un gr&#x00E1;fico a <a href="https://es.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>&#x003A;"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "Al recibir la monstruosidad anterior, el motor RDF pliega el RDF en el gr&#x00E1;fico en el lugar apropiado, y el control de &#x00E1;rbol que realmente implementa la interfaz de usuario en los marcadores es notificado de que debe comenzar a dibujar algunos &#x00ED;conos para el &#x00FA;ltimo mensaje sobre pan de Banana de la T&#x00ED;a Helga."
+
 #: /content/amp-dev/index-2021.html:2
 msgid "Knowledge graph applications"
 msgstr "Aplicaciones de gráficos de conocimiento"
