--- a/pages/translations/pt_BR/LC_MESSAGES/messages.po
+++ b/pages/translations/pt_BR/LC_MESSAGES/messages.po
@@ -1,3 +1,59 @@
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "RDF em cinquenta palavras ou menos"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "Tudo bem, talvez tenha um pouco mais do que cinquenta palavras, mas os pontos&#x002D;chave s&#x00E3;o bem simples (e colocados em <b>negrito</b> para as pessoas que querem ir direto ao ponto). O <a href="https://pt.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, ou &#x201C;RDF&#x201D;, &#x00E9; na verdade duas coisas."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "Em primeiro lugar, RDF &#x00E9; um modelo baseado em gr&#x00E1;ficos para descrever recursos da Internet (como p&#x00E1;ginas web e mensagens de e&#x002D;mail), e como esses recursos se relacionam entre si."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "Mas o que isso realmente significa&#x003F; Para um desenvolvedor, isso significa que um modelo de dados RDF (o &#x201C;gr&#x00E1;fico&#x201D;) pode ser usado como um mecanismo para integrar e organizar recursos da Internet."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "Vejamos um exemplo&#x003A; <i>favoritos</i>. Atualmente, a maioria dos navegadores permite organizar seus favoritos hierarquicamente em <i>pastas</i>. Cada favorito &#x00E9; um <i>indicador</i> para uma p&#x00E1;gina web chamada <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "Mas uma página web é apenas um tipo de recurso da Internet. Existem muitos outros, incluindo mensagens de e-mail, artigos do Reddit, feeds RSS e resultados de pesquisa do seu rastreador da web favorito, só para citar alguns. E, fundamentalmente, não há razão para que você não possa tratá-los como &#x201C;marcadores&#x201D; também, agrupando-os em pastas como desejar, ou talvez até criando pastas &#x201C;smart&#x201D; pastas que, ao abri-las, geram dinamicamente seu conteúdo executando uma pesquisa comum definida por você."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "E um &#x201C;favorito&#x201D; realmente poderia ter propriedades arbitr&#x00E1;rias associadas a ele&#x003A; voc&#x00EA; pode querer criar seu pr&#x00F3;prio esquema de &#x201C;classifica&#x00E7;&#x00E3;o&#x201D; para um favorito, como a codifica&#x00E7;&#x00E3;o de cores do Macintosh &#x201C;quente&#x201D;, &#x201C;morno&#x201D; e &#x201C;frio&#x201D;. Ou voc&#x00EA; pode querer relacionar um favorito a outro, ou mant&#x00EA;&#x002D;lo em v&#x00E1;rias &#x201C;pastas&#x201D; de uma vez s&#x00F3;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "O gr&#x00E1;fico RDF proporciona um modelo de dados perfeito para construir um servi&#x00E7;o de favoritos &#x201C;universal&#x201D; como descrito anteriormente&#x003A; o gr&#x00E1;fico pode conter indicadores para recursos arbitr&#x00E1;rios e pode agrup&#x00E1;&#x002D;los de qualquer maneira que puder imaginar."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "Mas espera que tem mais..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "Em segundo lugar, RDF &#x00E9; uma sintaxe de serializa&#x00E7;&#x00E3;o. Essa sintaxe permite que o modelo tipo gr&#x00E1;fico se comunique entre &#x201C;agentes&#x201D;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "Certo, mas o que <i>isso</i> significa&#x003F; Fundamentalmente, significa que partes do modelo de dados RDF podem comunicar&#x002D;se atrav&#x00E9;s dos limites da rede e que o conte&#x00EA;do do grf&#x00E1;ico pode mudar dinamicamente a medida que as informa&#x00E7;&#x00F5;es chegam de um servi&#x00E7;o remoto."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "Vamos voltar para o exemplo dos favoritos. Digamos que uma das minhas &#x201C;pastas&#x201D; de favoritos &#x00E9; na realidade um apontador para minha caixa de e&#x002D;mail&#x003A; quando abro essa pasta, voil&#x00E1;&#x0021; Aparecem todas as mensagens que recebi durante a noite."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "Mas como isso acontece&#x003F; A &#x201C;pasta&#x201D; da caixa de e&#x002D;mail era na verdade apenas um apontador para um recurso da Internet que cont&#x00E9;m mais RDF que estende o gr&#x00E1;fico. Esse &#x201C;recurso da Internet&#x201D; era um URI que apontava para um script CGI (por exemplo, &lt;code&gt;<span> http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox</span>&lt;/code&gt;). O script CGI realmente gera <i>RDF serializado</i>, que &#x00E9; basicamente apenas uma maneira de formatar um gr&#x00E1;fico em <a href="https://pt.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>&#x003A;"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "Ao receber a monstruosidade acima, o mecanismo RDF vincula o RDF ao gr&#x00E1;fico no local apropriado, e o controle de &#x00E1;rvore que realmente implementa a interf&#x00E1;cie de usu&#x00E1;rio dos favoritos &#x00E9; notificado de que deve come&#x00E7;ar a desenhar alguns &#x00ED;cones para a &#xfa;ltima mensagem sobre P&#x00E3;o de Banana da Tia Helga."
+
 #: /content/amp-dev/index-2021.html:2
 msgid "Knowledge graph applications"
 msgstr "Aplicativos de gráfico de conhecimento"
