--- a/pages/translations/ru/LC_MESSAGES/messages.po
+++ b/pages/translations/ru/LC_MESSAGES/messages.po
@@ -1,3 +1,115 @@
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "Elli veya Daha Az Kelimeyle RDF"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "Tamam, belki bu elli kelimeden biraz fazla olabilir, ancak kilit noktalar oldukça basittir (ve doğrudan konuya girmek isteyen yönetici türleri için <b>kalın metin</b> ile yazılmıştır) . <a href="https://tr.wikipedia.org/wiki/Kaynak_Tan%C4%B1mlama_%C3%87er%C3%A7evesi"><i>Kaynak Açıklama Çerçevesi</i></a> veya &#x201C;RDF&#x201D; aslında iki şeydir ."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "İlk olarak RDF, İnternet <i>kaynaklarını</i> (web sayfaları ve e-posta mesajları gibi) ve bu kaynakların birbirleriyle nasıl ilişkili olduğunu açıklayan grafik tabanlı bir modeldir."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "Peki bu <i>gerçekten</i> ne anlama geliyor? Bir geliştirici için bu, RDF veri modelinin ( &#x0027;grafik &#x0027;) İnternet kaynaklarını entegre etmek ve düzenlemek için bir mekanizma olarak kullanılabileceği anlamına gelir."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "Bir örneğe bakalım: <i>yer işaretleri</i>. Şu anda çoğu web tarayıcısı, yer işaretlerinizi <i>klasörler</i> halinde hiyerarşik olarak düzenlemenize olanak tanıyor. Her yer işareti, <b>URI</b> (<b>U</b>tekbiçimli <b>R</b>kaynak <b>I<) adı verilen bir web sayfasına giden bir <i>işaretçidir</i> /b>tanımlayıcı)."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "Ancak bir web sayfası İnternet kaynaklarının yalnızca bir türüdür. Sadece birkaçını saymak gerekirse, e-posta mesajları, reddit makaleleri, RSS beslemeleri ve favori web tarayıcınızın arama sonuçları da dahil olmak üzere tonlarca başka şey vardır. Ve temel olarak, bunları "yer işaretleri" olarak değerlendirmemeniz için hiçbir neden yok; ayrıca bunları istediğiniz gibi klasörler halinde gruplandırabilir veya hatta &#x201C;akıllı&#x201D; Açtığınızda tanımladığınız ortak aramayı çalıştırarak içeriklerini dinamik olarak oluşturan klasörler."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "Ve bir &#x201C;yer imi&#x201D; gerçekten bununla ilişkili keyfi özelliklere sahip olabilir: kendi &#x201C;sınıflandırmanızı&#x201D; icat etmek isteyebilirsiniz; <i>la</i> Macintosh &#x0027;un "sıcak", "sıcak", "havalı" yer imi şeması renk kodlaması. Ya da bir yer işaretini başka bir yer imiyle ilişkilendirmek veya onu birden çok &#x201C;klasörde&#x201D tutmak isteyebilirsiniz; bir kerede."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "RDF grafiği, üzerine  &#x0027;evrensel &#x0027; bir veri modeli oluşturulacak mükemmel bir veri modeli sağlar. yukarıda açıklandığı gibi yer imi hizmeti: grafik, isteğe bağlı kaynaklara yönelik işaretçiler içerebilir ve bunları, hayal edebileceğiniz hemen hemen her şekilde gruplandırabilir."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "Ama bekleyin, dahası da var..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "İkincisi, RDF bir serileştirme sözdizimidir. Bu sözdizimi, grafik benzeri modelin "aracılar" arasında iletilmesine olanak tanır."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "Tamam, <i>bu</i> ne anlama geliyor? Temel olarak bu, RDF veri modelinin bazı bölümlerinin ağ sınırları üzerinden iletilebileceği ve uzak bir hizmetten bilgi geldiğinde grafiğin içeriğinin dinamik olarak değişebileceği anlamına gelir."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "Yer imi örneğimize geri dönelim. Yer işaretim olan &#x201C;klasörlerimden&#x201D; bu gerçekten e-posta gelen kutumun bir işaretçisidir: o klasörü açtığımda, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! Gece boyunca aldığım tüm mesajlar görünüyor."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "Peki bu nasıl oldu? Gelen kutusu &#x201C;klasörü&#x201D; aslında grafiği genişleten daha fazla RDF içeren bir İnternet kaynağına yönelik bir işaretçiydi. Bu  &#x0027;İnternet kaynağı &#x0027;; bir CGI betiğine işaret eden bir URI &#x0027;ydi (örneğin, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>) &lt;/code&gt;). CGI betiği aslında <i>serileştirilmiş RDF</i> üretir; bu, temel olarak bir grafiği <a href="https://tr.wikipedia.org/wiki/XML">XML</a olarak biçimlendirmenin bir yoludur. >:"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "Yukarıdaki canavarın alınması üzerine, RDF motoru, RDF &#x0027;yi uygun yerde grafiğe katlar ve kullanıcı arayüzünü yer imlerine fiilen uygulayan ağaç kontrolüne, Muzlu Ekmek hakkındaki en son mesaj için bazı simgeler çizmeye başlaması gerektiği bildirilir. Helga Teyze."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "RDF &#x432; &#x41f;&#x44f;&#x442;&#x438;&#x434;&#x435;&#x441;&#x44f;&#x442;&#x438; &#x421;&#x43b;&#x43e;&#x432;&#x430;&#x445; &#x438;&#x43b;&#x438; &#x41c;&#x435;&#x43d;&#x44c;&#x448;&#x435;"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "&#x41e;&#x43a;&#x435;&#x439;, &#x432;&#x43e;&#x437;&#x43c;&#x43e;&#x436;&#x43d;&#x43e;, &#x437;&#x434;&#x435;&#x441;&#x44c &#x43d;&#x435;&#x43c;&#x43d;&#x43e;&#x433;&#x43e; &#x431;&#x43e;&#x43b;&#x44c;&#x448;&#x435;, &#x447;&#x435;&#x43c; &#x43f;&#x44f;&#x442;&#x44c;&#x434;&#x435;&#x441;&#x44f;&#x442; &#x441;&#x43b;&#x43e;&#x432;, &#x43d;&#x43e; &#x43a;&#x43b;&#x44e;&#x447;&#x435;&#x432;&#x44b;&#x435; &#x43c;&#x43e;&#x43c;&#x435;&#x43d;&#x442;&#x44b; &#x434;&#x43e;&#x432;&#x43e;&#x43b;&#x44c;&#x43d;&#x43e; &#x43f;&#x440;&#x43e;&#x441;&#x442;&#x44b; (&#x438; &#x432;&#x44b;&#x434;&#x435;&#x43b;&#x435;&#x43d;&#x44b; <b> &#x436;&#x438;&#x440;&#x43d;&#x44b;&#x43c; &#x448;&#x440;&#x438;&#x444;&#x442;&#x43e;&#x43c;</b> &#x434;&#x43b;&#x44f; &#x442;&#x435;&#x445; &#x442;&#x438;&#x43f;&#x43e;&#x432; &#x43b;&#x44e;&#x434;&#x435;&#x439;, &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x435; &#x445;&#x43e;&#x442;&#x44f;&#x442; &#x43f;&#x435;&#x440;&#x435;&#x439;&#x442;&#x438; &#x441;&#x440;&#x430;&#x437;&#x443; &#x43a; &#x441;&#x443;&#x442;&#x438;). <a href="https://ru.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a> &#x438;&#x43b;&#x438; &#x201C; RDF&#x201C; &#x44d;&#x442;&#x43e; &#x432; &#x434;&#x435;&#x439;&#x441;&#x442;&#x432;&#x438;&#x442;&#x435;&#x43b;&#x44c;&#x43d;&#x43e;&#x441;&#x442;&#x438; &#x434;&#x432;&#x435; &#x432;&#x435;&#x449;&#x438;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "Во–первых, RDF представляет собой граф–модель для описания интернет–ресурсов (таких как веб–страницы или электронные сообщения) и того, как эти ресурсы связаны друг с другом."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "Но что это на самом деле означает? Для разработчика это означает, что модель данных RDF (“граф“) может использоваться как механизм для интеграции и организации интернет–ресурсов. "
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "Давайте рассмотрим пример: закладки. В настоящее время большинство веб–браузеров позволяют иерархически сортировать ваши закладки по папкам. Каждая закладка представляет собой указатель на веб–страницу, называемую URI (Uniform Resource Identifier)."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "Но веб-страница — это всего лишь один из видов интернет-ресурса. Есть множество других, включая сообщения электронной почты, статьи Reddit, RSS-каналы и результаты поиска вашего любимого веб-сканера, и это лишь некоторые из них. И, по сути, нет причин, по которым вы не могли бы относиться к ним как к «закладкам»; а также группируя их в папки по своему усмотрению или, может быть, даже создавая &#x201C;smart&#x201D; папки, которые при их открытии динамически генерируют их содержимое, выполняя определенный вами общий поиск."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "“Закладка“ может действительно иметь связанные с ней произвольные свойства: вы можете придумать собственную схему “классификации“ для закладки в духе “горячего“, “теплого“, “холодного“ цветового кодирования Macintosh. Вы можете связать закладку с другой закладкой или, например, сохранить ее в нескольких “папках“ сразу."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "Граф RDF обеспечивает идеальную модель данных, на которой можно построить “универсальную“ службу закладок, как описано выше: граф может содержать указатели на произвольные ресурсы и группировать их практически любым способом, который вы можете себе представить."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "Но подождите, ведь есть еще..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "Во–вторых, RDF является синтаксисом сериализации. Этот синтаксис позволяет графоподобной модели взаимодействовать между “агентами“."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "Окей, что, черт возьми, это означает? По сути, это означает, что части модели данных RDF могут связываться через границы сети, а содержимое графа может динамически изменяться по мере поступления информации от удаленной службы."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "Вернемся к нашему примеру с закладками. Скажем, что одна из моих “папок“ с закладками — это на самом деле указатель на мой почтовый ящик: когда я открываю эту папку, вуаля! Появились все сообщения, которые я получил за ночь."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "&#x41d;&#x43e; &#x43a;&#x430;&#x43a; &#x44d;&#x442;&#x43e; &#x43f;&#x440;&#x43e;&#x438;&#x437;&#x43e;&#x448;&#x43b;&#x43e;&#x003F; &#x201C;&#x41f;&#x430;&#x43f;&#x43a;&#x430;&#x201C; с &#x432;&#x445;&#x43e;&#x434;&#x44f;&#x449;&#x438;&#x43c;&#x438; &#x441;&#x43e;&#x43e;&#x431;&#x449;&#x435;&#x43d;&#x438;&#x44f;&#x43c;&#x438; &#x431;&#x44b;&#x43b;&#x430; &#x434;&#x435;&#x439;&#x441;&#x442;&#x432;&#x438;&#x442;&#x435;&#x43b;&#x44c;&#x43d;&#x43e; &#x43f;&#x440;&#x43e;&#x441;&#x442;&#x43e; &#x443;&#x43a;&#x430;&#x437;&#x430;&#x442;&#x435;&#x43b;&#x435;&#x43c; &#x43d;&#x430; &#x438;&#x43d;&#x442;&#x435;&#x440;&#x43d;&#x435;&#x442;&#x2013;&#x440;&#x435;&#x441;&#x443;&#x440;&#x441;, &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x439; &#x441;&#x43e;&#x434;&#x435;&#x440;&#x436;&#x438;&#x442; &#x431;&#x43e;&#x43b;&#x44c;&#x448;&#x435; RDF, &#x440;&#x430;&#x441;&#x448;&#x438;&#x440;&#x44f;&#x44e;&#x449;&#x438;&#x445; &#x433;&#x440;&#x430;&#x444;. &#x42d;&#x442;&#x43e;&#x442; &#x201C;&#x438;&#x43d;&#x442;&#x435;&#x440;&#x43d;&#x435;&#x442;&#x2013; &#x440;&#x435;&#x441;&#x443;&#x440;&#x441; &#x201C; был URI, &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x439; &#x443;&#x43a;&#x430;&#x437;&#x44b;&#x432;&#x430;&#x43b; &#x43d;&#x430; CGI&#x2013;&#x441;&#x43a;&#x440;&#x438;&#x43f;&#x442; (&#x43d;&#x430;&#x43f;&#x440;&#x438;&#x43c;&#x435;&#x440;, &lt;code&gt;<span> http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&folder=inbox</span>&lt;/code&gt;). CGI&#x2013;&#x441;&#x43a;&#x440;&#x438;&#x43f;&#x442; &#x444;&#x430;&#x43a;&#x442;&#x438;&#x447;&#x435;&#x441;&#x43a;&#x438; &#x433;&#x435;&#x43d;&#x435;&#x440;&#x438;&#x440;&#x443;&#x435;&#x442; <i> &#x441;&#x435;&#x440;&#x438;&#x430;&#x43b;&#x438;&#x437;&#x43e;&#x432;&#x430;&#x43d;&#x43d;&#x44b;&#x439; </i> RDF, &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x439;, &#x43f;&#x43e; &#x441;&#x443;&#x442;&#x438;, &#x44f;&#x432;&#x43b;&#x44f;&#x435;&#x442;&#x441;&#x44f; &#x441;&#x43f;&#x43e;&#x441;&#x43e;&#x431;&#x43e;&#x43c; &#x444;&#x43e;&#x440;&#x43c;&#x430;&#x442;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x433;&#x440;&#x430;&#x444;&#x430; &#x432; XML&#x003A; <a href="https://ru.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>&#x003A;"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "После получения чудовища выше, RDF–движок сбрасывает RDF в граф в соответствующем месте, а управление деревом, которое фактически реализует UI для закладок, уведомляется о том, что оно должно начать рисовать несколько значков для последнего сообщения о Банановом Хлебе от Тети Хельги."
+
 #: /content/amp-dev/index-2021.html:2
 msgid "Knowledge graph applications"
 msgstr "Приложения графа знаний"
