--- a/pages/translations/vi/LC_MESSAGES/messages.po
+++ b/pages/translations/vi/LC_MESSAGES/messages.po
@@ -1,3 +1,59 @@
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "RDF trong năm mươi từ hoặc ít hơn"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "Được rồi, có lẽ bài viết này dài hơn năm mươi từ một chút, nhưng các điểm chính khá đơn giản (và được viết bằng <b>văn bản in đậm</b> dành cho những người quản lý chỉ muốn đi thẳng vào vấn đề) . <a href="https://vi.wikipedia.org/wiki/RDF"><i>Khung mô tả tài nguyên</i></a> hay &#x201C;RDF&#x201D;, thực sự là hai thứ ."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "Đầu tiên, RDF là mô hình dựa trên biểu đồ để mô tả <i>tài nguyên</i> Internet (như các trang web và thư email) và cách các tài nguyên này liên quan với nhau."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "Nhưng điều đó có nghĩa là gì, <i>thật sự</i>? Đối với nhà phát triển, điều đó có nghĩa là mô hình dữ liệu RDF (biểu đồ) có thể được sử dụng làm cơ chế tích hợp và tổ chức tài nguyên Internet."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "Hãy xem một ví dụ: <i>dấu trang</i>. Hiện tại, hầu hết các trình duyệt web đều cho phép bạn sắp xếp dấu trang theo thứ bậc vào <i>thư mục</i>. Mỗi dấu trang là một <i>con trỏ</i> tới một trang web có tên là <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I< /b>mã định danh)."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "Nhưng trang web chỉ là một loại tài nguyên Internet. Có rất nhiều thứ khác, bao gồm tin nhắn email, bài viết reddit, nguồn cấp dữ liệu RSS và kết quả tìm kiếm từ trình thu thập dữ liệu web yêu thích của bạn, chỉ kể tên một số. Và về cơ bản, không có lý do gì mà bạn không thể coi những thứ này là &#x201;dấu trang&#x201D; đồng thời, nhóm chúng lại với nhau thành các thư mục theo ý muốn hoặc thậm chí có thể tạo các ứng dụng &#x201;thông minh&#x201D; các thư mục mà khi bạn mở chúng, sẽ tự động tạo nội dung của chúng bằng cách chạy tìm kiếm phổ biến mà bạn xác định."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "Và một &#x201;dấu trang&#x201D; thực sự có thể có các thuộc tính tùy ý được liên kết với nó: bạn có thể muốn phát minh ra &#x201;phân loại&#x201D của riêng mình; lược đồ cho dấu trang <i>a la</i> Macintosh&#x201C;nóng&#x201D;, &#x201C;ấm&#x201D;, &#x201C;ngầu&#x201D; mã màu. Hoặc bạn có thể muốn liên kết dấu trang này với dấu trang khác hoặc giữ dấu trang đó trong nhiều &#x201C;thư mục&#x201D; một lần."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "Biểu đồ RDF cung cấp một mô hình dữ liệu hoàn hảo để xây dựng một mô hình &#x201;phổ quát&#x201D; dịch vụ đánh dấu trang như được mô tả ở trên: biểu đồ có thể chứa các con trỏ tới các tài nguyên tùy ý và có thể nhóm chúng theo bất kỳ cách nào mà bạn có thể tưởng tượng."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "Nhưng chờ đã, còn nhiều..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "Thứ hai, RDF là một cú pháp tuần tự hóa. Cú pháp này cho phép mô hình giống như biểu đồ được giao tiếp giữa các &#x201;agent&#x201D;."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "Được rồi, <i>điều đó</i> có nghĩa là gì vậy? Về cơ bản, điều đó có nghĩa là các phần của mô hình dữ liệu RDF có thể được truyền đạt qua ranh giới mạng và nội dung của biểu đồ có thể thay đổi linh hoạt khi thông tin đến từ một dịch vụ từ xa."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "Hãy quay lại ví dụ về dấu trang của chúng tôi. Giả sử rằng một trong các dấu trang của tôi &#x201C;thư mục&#x201D; thực sự là một con trỏ tới hộp thư đến email của tôi: khi tôi mở thư mục đó, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! Tất cả tin nhắn tôi nhận được qua đêm đều xuất hiện."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "Nhưng điều đó đã xảy ra như thế nào? Hộp thư đến &#x201C;thư mục&#x201D; thực sự chỉ là một con trỏ tới một tài nguyên Internet chứa nhiều RDF mở rộng biểu đồ. Đó là &#x201;Tài nguyên Internet&#x201D; là một URI trỏ đến tập lệnh CGI (giả sử &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span> &lt;/mã&gt;). Tập lệnh CGI thực sự tạo ra <i>RDF được tuần tự hóa</i>, về cơ bản chỉ là một cách định dạng biểu đồ thành <a href="https://vi.wikipedia.org/wiki/Extensible_Markup_Language">XML</a >:"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "Khi nhận được sự quái dị ở trên, công cụ RDF sẽ gấp RDF vào biểu đồ ở vị trí thích hợp và điều khiển cây thực sự triển khai giao diện người dùng cho các dấu trang được thông báo rằng nó sẽ bắt đầu vẽ một số biểu tượng cho thông báo mới nhất về Banana Bread từ Dì Helga."
+
 #: /content/amp-dev/index-2021.html:2
 msgid "Knowledge graph applications"
 msgstr "Ứng dụng đồ thị tri thức"
