--- a/pages/translations/zh_CN/LC_MESSAGES/messages.po
+++ b/pages/translations/zh_CN/LC_MESSAGES/messages.po
@@ -1,3 +1,59 @@
+#: /content/amp-dev/about/rdf-in-fifty.html:26
+msgid "RDF in Fifty Words or Less"
+msgstr "50 字解說 RDF"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:36
+msgid "Okay, so maybe this is a bit more than fifty words, but the key points are pretty simple (and put into <b>bold text</b> for you manager&#x2013;types who just want to get straight to the point). The <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework"><i>Resource Description Framework</i></a>, or &#x201C;RDF&#x201D;, is really two things."
+msgstr "好吧，可能比 50 字還要多一點，但重點十分簡單（並且已經幫諸位只想看重點的成功人士標為 <strong>粗體</strong>）。 <a href="https://zh.wikipedia.org/wiki/%E8%B3%87%E6%BA%90%E6%8F%8F%E8%BF%B0%E6%A1%86%E6%9E%B6">資源描述架構</a>，或稱為「RDF」（Resource Description Framework），其實是指兩件事。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:42
+msgid "First, RDF is a graph&#x2013;based model for describing Internet <i>resources</i> (like web pages and email messages), and how these resources relate to one another."
+msgstr "首先，RDF 是種圖像式模型，用以描述網路上的 <em>資源</em>（如網頁內容、電子郵件訊息等），以及這些資源之間的關係。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:48
+msgid "But what does that mean, <i>really</i>? To a developer, it means that the RDF data model (the &#x201C;graph&#x201D;) can be used as a mechanism for integrating and organizing Internet resources."
+msgstr "不過這到底是什麼意思？對 開發者來說，這代表 RDF 資料模型（就是那個「圖像」）可以用來組織、整合網路上的資源。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:51
+msgid "Let&#x0027;s look at an example: <i>bookmarks</i>. Right now, most web browsers let you organize your bookmarks hierarchically into <i>folders</i>. Each bookmark is a <i>pointer</i> to a web page called a <b>URI</b> (<b>U</b>niform <b>R</b>esource <b>I</b>dentifier)."
+msgstr "舉「書籤」為例。目前大部分的網頁瀏覽器讓你將書籤歸入資料夾的樹狀結構，每個書籤則指向一個網頁的 <strong>URI</strong>（通用資源定義符，<strong>U</strong>niform <strong>R</strong>esource <strong>I</strong>dentifier）。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:54
+msgid "But a web page is just one kind of Internet resource. There are tons of others, including email messages, reddit articles, RSS feeds, and search results from your favorite web crawler, just to name a few. And fundamentally, there&#x0027;s no reason that you shouldn&#x0027;t be able to treat these as &#x201C;bookmarks&#x201D; as well, grouping them together into folders as you please, or maybe even creating &#x201C;smart&#x201D; folders that, when you open them, dynamically generate their contents by running common search that you define."
+msgstr "但网页只是互联网资源的一种。还有大量其他内容，包括电子邮件、reddit 文章、RSS 源和您最喜欢的网络爬虫的搜索结果，仅举几例。从根本上讲，您没有理由不能将它们视为“书签”。也可以根据需要将它们分组到文件夹中，甚至可以创建“智能”；文件夹，当您打开它们时，会通过运行您定义的通用搜索动态生成其内容。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:57
+msgid "And a &#x201C;bookmark&#x201D; could really have arbitrary properties associated with it: you might want to invent your own &#x201C;classification&#x201D; scheme for a bookmark <i>a la</i> Macintosh&#x0027;s &#x201C;hot&#x201D;, &#x201C;warm&#x201D;, &#x201C;cool&#x201D; color coding. Or you might want to relate a bookmark to another bookmark, or keep it in multiple &#x201C;folders&#x201D; at once."
+msgstr "一個「書籤」尚且應有眾多相關的屬性：您可能想自己定義一些書籤的「分類規則」、依據麥金塔的「hot」、「warm」、「cool」色彩標準上色；又或許，您想標示某個書籤與另一個書籤有關，還可能想將其同時放入多個不同的資料夾。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:60
+msgid "The RDF graph provides a perfect data model upon which to build a &#x201C;universal&#x201D; bookmarking service as described above: the graph can contain pointers to arbitrary resources and can group them in just about any way that you can imagine."
+msgstr "RDF 圖像提供絕佳資料模型，可以建立上述的「通用」書籤服務：這種圖像可以指向任意資源、亦能以幾乎任何想得到的方式組織。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:62
+msgid "But wait, there&#x0027;s more..."
+msgstr "別那麼快下結論，還有..."
+
+#: /content/amp-dev/about/rdf-in-fifty.html:68
+msgid "Second, RDF is a serialization syntax. This syntax allows the graph&#x2013;like model to be communicated between &#x201C;agents&#x201D;."
+msgstr "第二，RDF 是種串接式的語法。這種語法讓圖像式的資料模型可以透過「代理人」溝通。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:74
+msgid "Okay, what the heck does <i>that</i> mean? Fundamentally, it means that parts of the RDF data model can be communicated across network boundaries, and the contents of the graph can dynamically change as information arrives from a remote service."
+msgstr "這又是什麼意思？基本上，這代表 RDF 資料模型可以跨越網路來交流，其圖像內容還可以在收到遠端服務的資訊時動態變更。"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:77
+msgid "Let&#x0027;s go back to our bookmark example. Say that one of my bookmark &#x201C;folders&#x201D; is really a pointer to my email inbox: when I open that folder, &#x76;&#x6f;&#x69;&#x6c;&#xe0;! All the messages that I&#x0027;ve received over night appear."
+msgstr "我們再回到書籤的例子。就說我有個書籤的「資料夾」，其實指向我的電子郵件收件匣：一旦點選這個資料夾，哇喔，所有昨晚收下來的郵件都列出來了！"
+
+#: /content/amp-dev/about/rdf-in-fifty.html:80
+msgid "But how did that happen? The inbox &#x201C;folder&#x201D; was really just a pointer to an Internet resource that contains more RDF that extends the graph. That &#x201C;Internet resource&#x201D; was a URI that pointed to a CGI script (say, &lt;code&gt;<span>http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;). The CGI script actually generates <i>serialized RDF</i>, which is basically just a way of formatting a graph into <a href="https://en.wikipedia.org/wiki/Extensible_Markup_Language">XML</a>:"
+msgstr "不過這是怎麼辦到的？其實這個「收件資料夾」指向一個網路資源，此資源內含更多的 RDF 來拓展資源版圖。此「網路資源」為一個指向 CGI 的 URI（像是 &lt;code&gt;<span class="nowiki">http://www.mozilla.org/smart-mail/get-mail.cgi?user=waterson&amp;folder=inbox</span>&lt;/code&gt;），此 CGI 會建立串接 RDF、就像是把一張圖片以 <a href="https://zh.wikipedia.org/wiki/Extensible_Markup_Language">&nbsp;XML&nbsp;</a> 方式表達一樣："
+
+#: /content/amp-dev/about/rdf-in-fifty.html:94
+msgid "Upon receipt of the above monstrosity, the RDF engine folds the RDF into the graph at the appropriate place, and the tree control that actually implements the UI to the bookmarks is notified that it should begin drawing some icons for the latest message about Banana Bread from Aunt Helga."
+msgstr "收到上面這堆怪物之後，RDF 引擎會將 RDF 資料放在圖像中的適當位置。負責實際繪出書籤介面的 Tree 控制項此時將收到通知，知道應該繪出 Aunt Helga 關於 Yam Soup 之信件的一些圖示。"
+
 #: /content/amp-dev/index-2021.html:2
 msgid "Knowledge graph applications"
 msgstr "知识图谱应用"
